kustomize/env/team-a-namespace/networkpolicy.yaml
# This is only needed if we already have other NetworkPolicy in the namespace, otherwise all incoming traffic is allowed by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-user-workload-monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: openshift-user-workload-monitoring
  podSelector: {}
